Signed-off-by: Lyon1994 <765211630@qq.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,16 @@
         android:layout_height="140dp"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
-        dpv:circleBackgroundColor="@color/red_light_primary_color"
-        dpv:progressBackgroundColor="@color/red_light_primary_color"
-        dpv:progressColor="@color/red_text_icon_color"
-        dpv:drawingColor="@color/red_text_icon_color"
-        dpv:progressDuration="2000"
-        dpv:resultDuration="5000"
-        dpv:circleRadius="48dp"
-        dpv:lineWidth="3dp"
-        dpv:strokeWidth="3dp"
-        dpv:overshootValue="2.5"
+        dpv:dpb_circleBackgroundColor="@color/red_light_primary_color"
+        dpv:dpb_progressBackgroundColor="@color/red_light_primary_color"
+        dpv:dpb_progressColor="@color/red_text_icon_color"
+        dpv:dpb_drawingColor="@color/red_text_icon_color"
+        dpv:dpb_progressDuration="2000"
+        dpv:dpb_resultDuration="5000"
+        dpv:dpb_circleRadius="48dp"
+        dpv:dpb_lineWidth="3dp"
+        dpv:dpb_strokeWidth="3dp"
+        dpv:dpb_overshootValue="2.5"
         />
 
     <TextView
